--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.marker__badge {
+  @apply inline-flex items-center rounded-full border border-blue-200 px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-blue-950 focus:ring-offset-2 dark:border-blue-800 dark:focus:ring-blue-300 border-transparent bg-blue-900 text-blue-50 hover:bg-blue-900/80 dark:bg-blue-50 dark:text-blue-900 dark:hover:bg-blue-50/80;
+}
